# nanograd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/nanograd/: mlp.hpp  value.hpp
src/: main.cpp
tests/: test_nanograd.cpp
